--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply from: '../config.gradle'
 
 android {
     compileSdk project.compileSdk
+    namespace project.appId
 
     defaultConfig {
         applicationId project.appId
@@ -44,7 +45,6 @@ dependencies {
 
     implementation project (':mad_navigation_compose')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     implementation "androidx.core:core-ktx:$ktxVersion"
 
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
